--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,5 +1,6 @@
 FROM mysql/mysql-server:latest
 ADD "create_tables.sql" /docker-entrypoint-initdb.d/
+ADD "populate_tables.sql" /docker-entrypoint-initdb.d/
 ADD "init.sh" /docker-entrypoint-initdb.d/
 ENV MYSQL_ROOT_PASSWORD=root
 ENV MYSQL_DATABASE=bloodbank
