--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,7 +1,13 @@
+FROM python:3.10.4-buster as python
+RUN apt-get update && apt-get install -y build-essential libffi-dev python-dev
+COPY python /python
+WORKDIR /python
+RUN python -m pip install -r requirements.txt
+RUN python main.py
+
 FROM mysql/mysql-server:latest
-ADD "create_tables.sql" /docker-entrypoint-initdb.d/
-ADD "populate_tables.sql" /docker-entrypoint-initdb.d/
-ADD "init.sh" /docker-entrypoint-initdb.d/
+COPY --from=python /python/queries /queries
+COPY "init.sh" /docker-entrypoint-initdb.d/
 ENV MYSQL_ROOT_PASSWORD=root
 ENV MYSQL_DATABASE=bloodbank
 ENV MYSQL_USER=umkc
